--- a/index.html
+++ b/index.html
@@ -222,8 +222,7 @@
                   "
                   src="./images/avatar-igordemyanenko.jpg"
                   alt="фото Ігорь Демьяненко"
-                  width="100%"
-                  height="100%"
+                  width="450"
                 />
               </div>
               <div class="personal-cards__info">
@@ -283,7 +282,7 @@
             </li>
 
             <li class="personal-cards__item">
-              <div class="thumb">
+              <div class="personal-cards__thumb">
                 <img
                   class="personal-cards__photo"
                   srcset="
@@ -292,8 +291,7 @@
                   "
                   src="./images/avatar-olgarepina.jpg"
                   alt="фото Ольга Репина"
-                  width="100%"
-                  height="100%"
+                  width="450"
                 />
               </div>
               <div class="personal-cards__info">
@@ -353,7 +351,7 @@
             </li>
 
             <li class="personal-cards__item">
-              <div class="thumb">
+              <div class="personal-cards__thumb">
                 <img
                   class="personal-cards__photo"
                   srcset="
@@ -362,8 +360,7 @@
                   "
                   src="./images/avatar-nikolaytarasov.jpg"
                   alt="фото Николай Тарасов"
-                  width="100%"
-                  height="100%"
+                  width="450"
                 />
               </div>
               <div class="personal-cards__info">
@@ -423,7 +420,7 @@
             </li>
 
             <li class="personal-cards__item">
-              <div class="thumb">
+              <div class="personal-cards__thumb">
                 <img
                   class="personal-cards__photo"
                   srcset="
@@ -432,8 +429,7 @@
                   "
                   src="./images/avatar-mihailermakov.jpg"
                   alt="фото Михаил Ермаков"
-                  width="100%"
-                  height="100%"
+                  width="450"
                 />
               </div>
               <div class="personal-cards__info">
