--- a/portfolio.html
+++ b/portfolio.html
@@ -153,8 +153,7 @@
                       class="card__photo"
                       src="./images/tehnokryak_450x294.jpg"
                       alt="фото tehnokryak"
-                      width="100%"
-                      height="100%"
+                      width="450"
                     />
                   </picture>
 
@@ -209,8 +208,7 @@
                       class="card__photo"
                       src="./images/poster-neworlean-vs-goldenstar_450x294.jpg"
                       alt="фото tehnokryak"
-                      width="100%"
-                      height="100%"
+                      width="450"
                     />
                   </picture>
                   <div class="card__overlay">
@@ -264,8 +262,7 @@
                       class="card__photo"
                       src="./images/restoran-seafood_450x294.jpg"
                       alt="фото tehnokryak"
-                      width="100%"
-                      height="100%"
+                      width="450"
                     />
                   </picture>
                   <div class="card__overlay">
@@ -319,8 +316,7 @@
                       class="card__photo"
                       src="./images/proekt-prime_450x294.jpg"
                       alt="фото tehnokryak"
-                      width="100%"
-                      height="100%"
+                      width="450"
                     />
                   </picture>
                   <div class="card__overlay">
@@ -374,8 +370,7 @@
                       class="card__photo"
                       src="./images/proekt-boxes_450x294.jpg"
                       alt="фото tehnokryak"
-                      width="100%"
-                      height="100%"
+                      width="450"
                     />
                   </picture>
                   <div class="card__overlay">
@@ -429,8 +424,7 @@
                       class="card__photo"
                       src="./images/inspiration-has-no-borders_450x294.jpg"
                       alt="фото tehnokryak"
-                      width="100%"
-                      height="100%"
+                      width="450"
                     />
                   </picture>
                   <div class="card__overlay">
@@ -484,8 +478,7 @@
                       class="card__photo"
                       src="./images/izdanie-limited-edition_450x294.jpg"
                       alt="фото tehnokryak"
-                      width="100%"
-                      height="100%"
+                      width="450"
                     />
                   </picture>
                   <div class="card__overlay">
@@ -540,8 +533,7 @@
                       class="card__photo"
                       src="./images/proekt-lab_450x294.jpg"
                       alt="фото tehnokryak"
-                      width="100%"
-                      height="100%"
+                      width="450"
                     />
                   </picture>
                   <div class="card__overlay">
@@ -595,8 +587,7 @@
                       class="card__photo"
                       src="./images/growing-business_450x294.jpg"
                       alt="фото tehnokryak"
-                      width="100%"
-                      height="100%"
+                      width="450"
                     />
                   </picture>
                   <div class="card__overlay">
