rework mobile-menu

--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
         <ul class="navigation__list navigation__list--mobile-menu">
           <li class="navigation__item navigation__item--mobile-menu">
             <a
-              class="navigation__link navigation__link--mobile-menu"
+              class="navigation__link navigation__link--mobile-menu navigation__link--current"
               href="./index.html"
               >Студия</a
             >
@@ -834,28 +834,36 @@
         </li>
         <li class="communication__item communication__item--mobile-menu">
           <ul class="social-networks social-networks--mobile-menu">
-            <li class="social-networks__item">
+            <li
+              class="social-networks__item social-networks__item--mobile-menu"
+            >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
                 href=""
                 >Instagram</a
               >
             </li>
-            <li class="social-networks__item">
+            <li
+              class="social-networks__item social-networks__item--mobile-menu"
+            >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
                 href=""
                 >Twitter</a
               >
             </li>
-            <li class="social-networks__item">
+            <li
+              class="social-networks__item social-networks__item--mobile-menu"
+            >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
                 href=""
                 >Facebook</a
               >
             </li>
-            <li class="social-networks__item">
+            <li
+              class="social-networks__item social-networks__item--mobile-menu"
+            >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
                 href=""
