--- a/portfolio.html
+++ b/portfolio.html
@@ -24,36 +24,65 @@
         <a class="logo page-header__logo" id="logo" href="./index.html"
           >Web<span class="logo__studio logo__studio--black">Studio</span></a
         >
+        <button
+          class="openMenu-button page-header__openMenu-button js-open-menu"
+        >
+          <svg class="openMenu-button__icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu_40px" />
+          </svg>
+        </button>
         <div class="navigation__menu">
           <nav class="navigation">
-            <ul class="navigation__list">
-              <li class="navigation__item">
-                <a class="navigation__link" href="./index.html">Студия</a>
-              </li>
-              <li class="navigation__item">
+            <ul class="navigation__list navigation__list--notMobile">
+              <li class="navigation__item navigation__item--notMobile">
                 <a
-                  class="navigation__link navigation__link--current"
+                  class="navigation__link navigation__link--notMobile"
+                  href="./index.html"
+                  >Студия</a
+                >
+              </li>
+              <li class="navigation__item navigation__item--notMobile">
+                <a
+                  class="navigation__link navigation__link--notMobile navigation__link--current"
                   href="./portfolio.html"
                   >Портфолио</a
                 >
               </li>
-              <li class="navigation__item">
-                <a class="navigation__link" href="#contacts">Контакты</a>
+              <li class="navigation__item navigation__item--notMobile">
+                <a
+                  class="navigation__link navigation__link--notMobile"
+                  href="#contacts"
+                  >Контакты</a
+                >
               </li>
             </ul>
           </nav>
-          <ul class="communication">
-            <li class="communication__item">
-              <a class="communication__link" href="mailto:info@devstudio.com">
-                <svg class="communication__icon" width="16" height="12">
+          <ul class="communication communication--notMobile">
+            <li class="communication__item communication__item--notMobile">
+              <a
+                class="communication__link communication__link--notMobile"
+                href="mailto:info@devstudio.com"
+              >
+                <svg
+                  class="communication__icon communication__icon--mail"
+                  width="16"
+                  height="12"
+                >
                   <use href="./images/icons.svg#icon-mail"></use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
-            <li class="communication__item">
-              <a class="communication__link" href="tel:+380961111111">
-                <svg class="communication__icon" width="10" height="16">
+            <li class="communication__item communication__item--notMobile">
+              <a
+                class="communication__link communication__link--notMobile"
+                href="tel:+380961111111"
+              >
+                <svg
+                  class="communication__icon communication__icon--smartphone"
+                  width="10"
+                  height="16"
+                >
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11
