--- a/portfolio.html
+++ b/portfolio.html
@@ -795,7 +795,9 @@
             >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
-                href=""
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noreferrer noopener"
                 >Instagram</a
               >
             </li>
@@ -804,7 +806,9 @@
             >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
-                href=""
+                href="https://twitter.com/"
+                target="_blank"
+                rel="noreferrer noopener"
                 >Twitter</a
               >
             </li>
@@ -813,7 +817,9 @@
             >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
-                href=""
+                href="https://www.facebook.com/"
+                target="_blank"
+                rel="noreferrer noopener"
                 >Facebook</a
               >
             </li>
@@ -822,7 +828,9 @@
             >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
-                href=""
+                href="https://www.linkedin.com/"
+                target="_blank"
+                rel="noreferrer noopener"
                 >LinkedIn</a
               >
             </li>
