--- a/index.html
+++ b/index.html
@@ -839,7 +839,9 @@
             >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
-                href=""
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noreferrer noopener"
                 >Instagram</a
               >
             </li>
@@ -848,7 +850,9 @@
             >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
-                href=""
+                href="https://twitter.com/"
+                target="_blank"
+                rel="noreferrer noopener"
                 >Twitter</a
               >
             </li>
@@ -857,7 +861,9 @@
             >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
-                href=""
+                href="https://www.facebook.com/"
+                target="_blank"
+                rel="noreferrer noopener"
                 >Facebook</a
               >
             </li>
@@ -866,7 +872,9 @@
             >
               <a
                 class="social-networks__link social-networks__link--mobile-menu"
-                href=""
+                href="https://www.linkedin.com/"
+                target="_blank"
+                rel="noreferrer noopener"
                 >LinkedIn</a
               >
             </li>
